# dkdc-md-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: check.yml  release-github.yml  release-python.yml  release-rust.yml  release.yml
crates/dkdc-md-cli/: Cargo.toml
crates/dkdc-md-cli-py/: Cargo.toml
crates/dkdc-md-cli-py/src/: lib.rs
crates/dkdc-md-cli/src/: auth.rs  client.rs  main.rs
dkdc-md-cli/: Cargo.toml
dkdc-md-cli-py/: Cargo.toml
dkdc-md-cli-py/src/: lib.rs
dkdc-md-cli/src/: auth.rs  cli.rs  lib.rs
py/dkdc_md_cli/: __init__.py  core.pyi
src/dkdc_md/: __init__.py
src/dkdc_md_cli/: __init__.py
tests/: cleanup-service-accounts  dashboard.py  test-integration  test-service-accounts-scale
