[project]
name = "dkdc-md-cli"
version = "0.1.4"
description = "CLI for the MotherDuck REST API"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
readme = "README.md"
dependencies = []

[project.urls]
Homepage = "https://github.com/lostmygithubaccount/dkdc-md-cli"
Repository = "https://github.com/lostmygithubaccount/dkdc-md-cli"
Issues = "https://github.com/lostmygithubaccount/dkdc-md-cli/issues"

[project.scripts]
md = "dkdc_md_cli:main"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "pytest>=8", "ipython>=9.10.0"]

[tool.maturin]
module-name = "dkdc_md_cli.core"
python-packages = ["dkdc_md_cli"]
python-source = "src"
manifest-path = "dkdc-md-cli-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "dkdc-md-cli/**/*.rs" },
  { file = "dkdc-md-cli-py/**/*.rs" },
]
